[package]
authors = ["Alex Grinman <alex@tunnelto.dev>", "Wang Zishi <wangzishi@illustiontech.cn>"]
description = "expose your local web server to the internet with a public url"
edition = "2021"
license = "MIT"
name = "portal"
readme = "../README.md"
repository = "https://github.com/illusion-tech/portal"
version = "0.1.20"

[[bin]]
name = "portal"
path = "src/main.rs"

[dependencies]
portal_lib = {path = "../portal_lib"}

askama = {version = "0.12", features = ["serde-json"]}
bytes = "1.0"
chrono = "0.4.11"
cli-table = "0.4"
colored = "2.0"
dirs = "5.0"
futures = "0.3"
http-body = "1.0"
httparse = "1.3.4"
human-panic = "1.0.3"
hyper-rustls = "0.26.0"
indicatif = "0.17"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.5"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
semver = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
structopt = "0.3.12"
thiserror = "1.0"
tokio = {version = "1.0", features = ["full"]}
tokio-rustls = "0.25.0"
tokio-tungstenite = {version = "0.21", features = ["rustls-tls-webpki-roots"]}
tungstenite = {version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots"]}
uuid = {version = "1.6", features = ["serde", "v4"]}
warp = "0.3"
webpki = "0.22"
webpki-roots = "0.26.0"
