[package]
authors = ["Alex Grinman <alex@tunnelto.dev>", "Wang Zishi <wangzishi@illustiontech.cn>"]
description = "Expose your local web server to the Internet with a public url."
edition = "2021"
license = "MIT"
name = "portal"
readme = "../README.md"
repository = "https://github.com/illusion-tech/portal"
version = "0.1.20"

[[bin]]
name = "portal"
path = "src/main.rs"

[dependencies]
portal_lib = {path = "../portal_lib"}

askama = {version = "0.12", features = ["serde-json"]}
bunt = "0.2.8"
bytes = "1"
chrono = "0.4"
clap = {version = "4", features = ["derive"]}
cli-table = "0.4"
dirs = "5"
futures = "0.3"
http-body = "1.0"
httparse = "1"
human-panic = "2"
indicatif = "0.17"
log = "0.4"
pretty_env_logger = "0.5"
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
semver = "1.0"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tokio-rustls = "0.26"
tokio-tungstenite = {version = "0.21", features = ["rustls-tls-webpki-roots"]}
tungstenite = {version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots"]}
uuid = {version = "1.7", features = ["serde", "v4"]}
warp = "0.3"
webpki = "0.22"
webpki-roots = "0.26"

serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_urlencoded = "0.7"
toml = "0.8"
