[package]
authors = ["Alex Grinman <alex@tunnelto.dev>", "Wang Zishi <wangzishi@illustiontech.cn>"]
description = "expose your local web server to the internet with a public url"
edition = "2021"
license = "MIT"
name = "portal_lib"
readme = "../README.md"
repository = "https://github.com/illusion-tech/portal"
version = "0.1.20"

[dependencies]
base64 = "0.22"
derive_builder = "0.20"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
