[package]
authors = ["Alex Grinman <alex@tunnelto.dev>", "Wang Zishi <wangzishi@illustiontech.cn>"]
description = "expose your local web server to the internet with a public url"
edition = "2021"
license = "MIT"
name = "portal_server"
readme = "../README.md"
repository = "https://github.com/illusion-tech/portal"
version = "0.1.20"

[[bin]]
name = "portal_server"
path = "src/main.rs"

[[bin]]
name = "tcp_echo_server"
path = "src/bin/tcp_echo_server.rs"

[[bench]]
harness = false
name = "echo_server_bench"

[dependencies]
portal_lib = {path = "../portal_lib"}

async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4", features = ["derive"]}
dashmap = "5.5"
futures = "0.3"
hex = "0.4"
hmac-sha256 = "1"
httparse = "1"
pretty_env_logger = "0.5"
rand = "0.8"
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
sha2 = "0.10"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
trust-dns-resolver = "0.23"
url = "2"
uuid = {version = "1", features = ["serde", "v4"]}
warp = "0.3"

serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.8"

tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
