[package]
authors = ["Alex Grinman <alex@tunnelto.dev>", "Wang Zishi <wangzishi@illustiontech.cn>"]
description = "expose your local web server to the internet with a public url"
edition = "2018"
license = "MIT"
name = "tunnelto"
readme = "../README.md"
repository = "https://github.com/agrinman/tunnelto"
version = "0.1.19"

[[bin]]
name = "tunnelto"
path = "src/main.rs"

[dependencies]
askama = {version = "0.9.0", features = ["serde-json"]}
bytes = "1.0"
chrono = "0.4.11"
cli-table = "0.4"
colored = "1.9.3"
dirs = "2.0.2"
futures = "0.3"
http-body = "0.3.1"
httparse = "1.3.4"
human-panic = "1.0.3"
hyper = "0.14"
hyper-rustls = "0.22.1"
indicatif = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
semver = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.6.1"
structopt = "0.3.12"
thiserror = "1.0"
tokio = {version = "1.0", features = ["full"]}
tokio-rustls = "0.22"
tokio-tungstenite = {version = "0.14", features = ["rustls-tls"]}
tungstenite = {version = "0.13", default-features = false, features = ["rustls-tls"]}
tunnelto_lib = {version = "0.1.20", path = "../tunnelto_lib"}
uuid = {version = "0.8.1", features = ["serde", "v4"]}
warp = "0.3"
webpki-roots = "0.21"
