[package]
authors = ["Alex Grinman <alex@tunnelto.dev>", "Wang Zishi <wangzishi@illustiontech.cn>"]
description = "expose your local web server to the internet with a public url"
edition = "2018"
license = "MIT"
name = "tunnelto_server"
readme = "../README.md"
repository = "https://tunnelto.dev"
version = "0.1.10"

[[bin]]
name = "tunnelto_server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.50"
base64 = "0.21.0"
chrono = "0.4.11"
dashmap = "4.0.2"
futures = "0.3"
hex = "0.4.3"
hmac-sha256 = "0.1.7"
httparse = "1.3.4"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
reqwest = {version = "0.11.2", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.9.0"
thiserror = "1.0"
tokio = {version = "1.0", features = ["full"]}
trust-dns-resolver = "0.20"
tunnelto_lib = {path = "../tunnelto_lib"}
url = "2.1.1"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
warp = "0.3"

tracing = "0.1.25"
tracing-honeycomb = {git = "https://github.com/agrinman/tracing-honeycomb", rev = "687bafa722ccd584f45aa470fbb637bc57c999cd"}
tracing-subscriber = "0.2.17"

# auth handler
rusoto_core = "0.46"
rusoto_credential = "0.46"
rusoto_dynamodb = "0.46"
