[package]
authors = ["Alex Grinman <alex@tunnelto.dev>", "Wang Zishi <wangzishi@illustiontech.cn>"]
description = "expose your local web server to the internet with a public url"
edition = "2021"
license = "MIT"
name = "tunnelto_server"
readme = "../README.md"
repository = "https://tunnelto.dev"
version = "0.1.20"

[[bin]]
name = "tunnelto_server"
path = "src/main.rs"

[dependencies]
tunnelto_lib = {path = "../tunnelto_lib"}

async-trait = "0.1.50"
base64 = "0.21.0"
chrono = {version = "0.4.11", features = ["serde"]}
clap = {version = "4.4", features = ["derive"]}
dashmap = "5.5"
futures = "0.3"
hex = "0.4.3"
hmac-sha256 = "1.1.7"
httparse = "1.3.4"
lazy_static = "1.4.0"
pretty_env_logger = "0.5"
rand = "0.8"
reqwest = {version = "0.11.2", features = ["json"]}
sha2 = "0.10"
thiserror = "1.0"
tokio = {version = "1.0", features = ["full"]}
trust-dns-resolver = "0.23"
url = "2.1.1"
uuid = {version = "1.6", features = ["serde", "v4"]}
warp = "0.3"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.8"

tracing = "0.1"
tracing-subscriber = "0.3"
